--- a/bahasa_daerah.html
+++ b/bahasa_daerah.html
@@ -60,12 +60,12 @@
             <!-- card 1 -->
         <div class="col">
             <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="Asset/Pengenalan Jawa.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">DASAR PENGENALAN BAHASA JAWA</h5>
+                <p class="card-text">Belajar mengenal bahasa jawa</p>
                 <div class="d-grid gap-2">
-                  <a href="belajarbahasa_jawa.html" class="btn btn-primary" type="button">Button</a>
+                  <a href="belajarbahasa_jawa.html" class="btn btn-primary" type="button">Mulai</a>
                 </div>
               </div>
             </div>
@@ -74,12 +74,12 @@
         <!-- card 2 -->
         <div class="col">
             <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="Asset/Pengenalan sunda.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title" >DASAR PENGENALAN BAHASA Sunda</h5>
+                <p class="card-text">Belajar mengenal bahasa Sunda</p>
              <div class="d-grid gap-2">
-                  <button class="btn btn-primary" type="button">Button</button>
+                  <button class="btn btn-primary" type="button">Mulai</button>
                 </div>
               </div>
             </div>
@@ -87,12 +87,13 @@
 
         <div class="col">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="Asset/Pengenalan dayak.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Pengenalan Bahasa Dayak</h5>
+                    <br>
+                    <p class="card-text"> Belajar mengenal bahasa dayak</p>
                  <div class="d-grid gap-2">
-                  <button class="btn btn-primary" type="button">Button</button>
+                  <button class="btn btn-primary" type="button">Mulai</button>
                 </div>
                   </div>
             </div>
@@ -107,12 +108,13 @@
             <!-- card 1 -->
         <div class="col">
             <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="Asset/Pengenalan bugis.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Pengenalan Bahasa Bugis</h5>
+                 <br>
+                    <p class="card-text"> Belajar mengenal bahasa dayak</p>
              <div class="d-grid gap-2">
-                  <button class="btn btn-primary" type="button">Button</button>
+                  <button class="btn btn-primary" type="button">Mulai</button>
                 </div>
               </div>
             </div>
@@ -121,12 +123,13 @@
         <!-- card 2 -->
         <div class="col">
             <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="Asset/Pengenalan madura.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Pengenalan Bahasa Madura</h5>
+                <br>
+                    <p class="card-text"> Belajar mengenal bahasa dayak</p>
              <div class="d-grid gap-2">
-                  <button class="btn btn-primary" type="button">Button</button>
+                  <button class="btn btn-primary" type="button">Mulai</button>
                 </div>
               </div>
             </div>
@@ -134,12 +137,13 @@
 
         <div class="col">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="Asset/Pengenalan bali.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Pengenalan Bahasa Bali</h5>
+                     <br>
+                    <p class="card-text"> Belajar mengenal bahasa dayak</p>
                  <div class="d-grid gap-2">
-                  <button class="btn btn-primary" type="button">Button</button>
+                  <button class="btn btn-primary" type="button">Mulai</button>
                 </div>
                   </div>
             </div>
