--- a/kosa_kata.html
+++ b/kosa_kata.html
@@ -60,12 +60,12 @@
             <!-- card 1 -->
         <div class="col">
             <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="Asset/Kosa Kata Jawa.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Kosa Kata Jawa</h5>
+                <p class="card-text">Belajar Kosa Kata bahasa jawa</p>
                  <div class="d-grid gap-2">
-                  <a href="tabelbahasa_jawa.html" class="btn btn-primary" type="button">Button</a>
+                  <a href="tabelbahasa_jawa.html" class="btn btn-primary" type="button">Mulai</a>
                 </div>
               </div>
             </div>
@@ -74,13 +74,13 @@
         <!-- card 2 -->
         <div class="col">
             <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="Asset/Kosa Kata sunda.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Kosa Kata Sunda</h5>
+                <p class="card-text"> Belajar Kosa kata bahasa sunda</p>
               
                <div class="d-grid gap-2">
-                  <button class="btn btn-primary" type="button">Button</button>
+                  <button class="btn btn-primary" type="button">Mulai</button>
                 </div>
 
               </div>
@@ -89,12 +89,12 @@
 
         <div class="col">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="Asset/Kosa kata dayak.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Kosa Kata Dayak</h5>
+                    <p class="card-text">Belajar kosa kata bahasa dayak.</p>
                      <div class="d-grid gap-2 ">
-                  <button class="btn btn-primary" type="button">Button</button>
+                  <button class="btn btn-primary" type="button">Mulai</button>
                 </div>
 
                   </div>
@@ -110,12 +110,12 @@
             <!-- card 1 -->
         <div class="col">
             <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="Asset/Kosa kata madura.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Kosa Kata Madura</h5>
+                <p class="card-text">Belajar Kosa Kata Bahasa Madura</p>
                <div class="d-grid gap-2">
-                  <button class="btn btn-primary" type="button">Button</button>
+                  <button class="btn btn-primary" type="button">Mulai</button>
                 </div>
               </div>
             </div>
@@ -124,12 +124,12 @@
         <!-- card 2 -->
         <div class="col">
             <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="Asset/Kosa Kata bugis.png" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Kosa Kata Bugis</h5>
+                <p class="card-text">Belajar Kosa Kata Bahasa Bugis</p>
                  <div class="d-grid gap-2">
-                  <button class="btn btn-primary" type="button">Button</button>
+                  <button class="btn btn-primary" type="button">Mulai</button>
                 </div>
               </div>
             </div>
@@ -137,12 +137,12 @@
 
         <div class="col">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="Asset/Kosa kata bali.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Kosa Kata Bali</h5>
+                    <p class="card-text">Belajar Kosa Kata Bahasa Bali</p>
                    <div class="d-grid gap-2">
-                  <button class="btn btn-primary" type="button">Button</button>
+                  <button class="btn btn-primary" type="button">Mulai</button>
                 </div>
                   </div>
             </div>
