--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="card mb-3" style="max-width: 400px; max-height: 400px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="Asset/Hero.png" class="img-fluid rounded-start" alt="...">
+            <img src="Asset/Bahasaicon.png" class="img-fluid rounded-start"  width="100px" height="100px"  style="padding-left: 30px; margin-top: 10px;" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -79,13 +79,13 @@
       <div class="card mb-3" style="max-width: 400px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="Asset/Hero.png" class="img-fluid rounded-start" alt="...">
+            <img src="Asset/Kosakataicon.png" class="img-fluid rounded-start"  width="100px" height="100px"  style="padding-left: 30px; margin-top: 10px;" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Belajar Bahasa daerah</h5>
-              <p class="card-text">Belajar dan mengenal beragam kebudayaan bahasa daerah</p>
-              <a href="bahasa_daerah.html" class="btn btn-primary btn-lg px-2" role="button" aria-pressed="true">Lebih Lanjut</a>
+               <h5 class="card-title">Pelajari Kosa Kata Bahasa</h5>
+              <p class="card-text">Mengenal Kosa Kata Bahasa Daerah</p>
+              <a href="kosa_kata.html" class="btn btn-primary btn-lg px-2" role="button" aria-pressed="true">Lebih Lanjut</a>
             </div>
           </div>
         </div>
@@ -95,13 +95,13 @@
       <div class="card mb-3" style="max-width: 400px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="Asset/Hero.png" class="img-fluid rounded-start" alt="...">
+            <img src="Asset/Quiz icon.png" class="img-fluid rounded-start" width="100px" height="100px"  style="padding-left: 30px; margin-top: 10px;"  alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Belajar Bahasa daerah</h5>
-              <p class="card-text">Belajar dan mengenal beragam kebudayaan bahasa daerah</p>
-              <a href="bahasa_daerah.html" class="btn btn-primary btn-lg px-2" role="button" aria-pressed="true">Lebih Lanjut</a>
+              <h5 class="card-title">Latihan Kuis Bahasa Daerah</h5>
+              <p class="card-text">Latihan dan asah kemampuan bahasa daerah</p>
+              <a href="kuis.html" class="btn btn-primary btn-lg px-2" role="button" aria-pressed="true">Lebih Lanjut</a>
             </div>
           </div>
         </div>
@@ -125,19 +125,21 @@
     </div>
     <!-- Kanan -->
     <div class="col-sm-7 col-md-6 text-start">
-      <h3 class="card-title">Manfaat belajar bahasa daerah</h5>
       <ul class="list-group">
+         <li class="list-group-item border-0 d-flex gap-3 py-3 border-0">
+            <h3 class="card-title">Manfaat belajar bahasa daerah</h5>
+        </li>
         <li class="list-group-item border-0 d-flex gap-3 py-3 border-0">
            <img src="Asset/1 (1).png" alt="" width="32" height="32" class="rounded-circle flex-shrink-0"> 
-          <p>ayam</p>
+          <p>Lestarikan Identitas, Bangun Kebanggaan</p>
         </li>
         <li class="list-group-item border-0 d-flex gap-3 py-3 border-0">
            <img src="Asset/2 (1).png" alt="" width="32" height="32" class="rounded-circle flex-shrink-0"> 
-          <p>ayam</p>
+          <p>Dekatkan Diri dengan Akar dan Sesama</p>
         </li>
         <li class="list-group-item border-0 d-flex gap-3 py-3 border-0">
            <img src="Asset/3.png" alt="" width="32" height="32" class="rounded-circle flex-shrink-0"> 
-          <p>ayam</p>
+          <p>Cerdas Bahasa, Siap Global</p>
         </li>
       </ul>
       <div class="d-grid gap-2 col-6">
@@ -150,7 +152,7 @@
   <div class="container" style="padding-left: 60px; padding-right: 60px;">
     <div class="row g-4">
       <div class="col-lg-4 col-md-6">
-        <p class="footer-title">About Company</h3>
+        <p class="footer-title">Lestari bahasa</h3>
       </div>
         <div class="col-lg-4 col-md-6">
         <p class="footer-title">@2025 Final Project PPW</h3>
